UPDATE: v4skin | kajona-overrides.less -> fixed the alignment of icons

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -1564,6 +1564,8 @@ table.form-control {
     display: inline-block;
     text-align: center;
 
+    vertical-align: top;
+
     a {
         text-decoration: none;
 
